@@ -2,8 +2,10 @@ package disease_surveillance.api_gateway.config;
 
 import disease_surveillance.api_gateway.filter.JwtAuthInterceptor;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -12,7 +14,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -20,12 +24,25 @@ public class SecurityConfig {
 
     private final JwtAuthInterceptor jwtAuthInterceptor;
 
+    // Inject allowed origins from application.yml so you don't hardcode them
+    @Value("${cors.allowed-origins}")
+    private List<String> allowedOrigins;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(Arrays.asList("*"));
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+
+        // Explicit origins — wildcard ("*") is unreliable and blocks credentials
+        corsConfig.setAllowedOrigins(allowedOrigins);
+
+        corsConfig.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        corsConfig.setAllowedHeaders(List.of("*"));
+
+        // Expose Authorization header so the frontend can read it from responses
+        corsConfig.setExposedHeaders(List.of("Authorization"));
+
         corsConfig.setAllowCredentials(false);
         corsConfig.setMaxAge(3600L);
 
@@ -44,6 +61,8 @@ public class SecurityConfig {
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // Explicitly permit all OPTIONS preflight requests at the Spring layer too
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .anyRequest().permitAll()
                 )
                 // Run JWT filter before Spring Security's own auth filter
